codama-macros/tests/node_attribute/public_key_type_node_with_input.fail.stderr
error: public_key_type does not accept any input
 --> tests/node_attribute/public_key_type_node_with_input.fail.rs:3:8
  |
3 | #[node(public_key_type(foo = 42))]
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^
