codama-macros/tests/node_attribute/public_key_type_node_with_input.fail.rs
use codama_macros::node;

#[node(public_key_type(foo = 42))]
pub struct Foo;

fn main() {}
